--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
 		<style>
 		   body {
-		    background-image: url(images/background.png); /* Путь к фоновому изображению */
+		    /*background-image: url(images/background.png);  Путь к фоновому изображению */
 		    background-attachment: fixed; /* Фиксируем фон веб-страницы */
-		    background-position: center center;
+			background-position: center center;
+			background-color:oldlace;
 		   }
 		
 		</style>
@@ -37,67 +38,77 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				  <ul class="navbar-nav">
 					<li class="nav-item active">
-					  <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Добавить свалку</a>
+					  <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="#">Волонтерства</a>
 					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="#">Все свалки</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="#">События свалок</a>
+					</li>
 					<li class="nav-item dropdown">
 					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Свалки
+							Действие со свалкой
 					  </a>
 					  <div class="dropdown-menu  bg-dark" style="color: white;" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Все свалки</a>
 						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Добавить свалку</a>
-						<a class="dropdown-item  bg-dark" style="color: white;" href="#">События свалок</a>
+						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Редактировать свалку</a>
 					  </div>
 					</li>
 				  </ul>
 				</div>
 		</nav>
+		<div class="jumbotron">
+			<h1 class="display-4  text-center pt-2">Портал о незаконных свалках</h1>
+			<h3 class="text-center"><small class="text-muted text-center">В России перерабатывается только 4% мусора.</small></h3>
+			<hr class="text-center  shadow-lg" width="50%" size="2" color="gray" />
+			<h5 class="text-center pt-2" width="75%">Пишите о незаконных свалках, сообщайте в органы власти, учавствуйте в волонтерских уборках, отслеживайте события свалок.
+				Да прибудет с нами чистота.
+			</h5>
 
-		<div class="container pt-5">
-			<div class="card-columns" style="display: inline-block">
+			<div class="container pt-5">
+				<div class="card-columns" style="display: inline-block">
 
 
-				<div class="card bg-light border-secondary text-center">
-					<img src="images/dump1.jpg" class="card-img-top " alt="images/dump1.jpg">
-					<div class="card-body ">
-						<h5 class="card-title">Главная свалка Барнуала</h5>
-						<p class="card-text">Данная свалка была образована уже лет 10 назад и с тех пор ее никто не прибирал...</p>
-						<a href="#" class="btn btn-primary ">Открыть польностью</a>
+					<div class="card bg-light border-secondary text-center">
+						<img src="images/dump1.jpg" class="card-img-top " alt="images/dump1.jpg">
+						<div class="card-body ">
+							<h5 class="card-title">Главная свалка Барнуала</h5>
+							<p class="card-text">Данная свалка была образована уже лет 10 назад и с тех пор ее никто не прибирал...</p>
+							<a href="openDump.html" class="btn btn-primary ">Открыть польностью</a>
+						</div>
 					</div>
-				</div>
-				<div class="card bg-light border-secondary text-center">
-					<img src="images/dump2.jpg" class="card-img-top " alt="images/dump1.jpg">
-					<div class="card-body ">
-						<h5 class="card-title">Это до сих пор не убрали</h5>
-						<p class="card-text">Как люди ходят мимо этого...</p>
-						<a href="#" class="btn btn-primary ">Открыть польностью</a>
-					</div>	
-				</div>
-				<div class="card bg-light border-secondary text-center">
-					<img src="images/dump3.jpg" class="card-img-top " alt="images/dump1.jpg">
-					<div class="card-body ">
-						<h5 class="card-title">Вонючая гора</h5>
-						<p class="card-text">Убирали раз 10, но опять образуется...</p>
-						<a href="#" class="btn btn-primary ">Открыть польностью</a>
+					<div class="card bg-light border-secondary text-center">
+						<img src="images/dump2.jpg" class="card-img-top " alt="images/dump1.jpg">
+						<div class="card-body ">
+							<h5 class="card-title">Это до сих пор не убрали</h5>
+							<p class="card-text">Как люди ходят мимо этого...</p>
+							<a href="openDump.html" class="btn btn-primary ">Открыть польностью</a>
+						</div>	
 					</div>
-				</div>
-				<div class="card bg-light border-secondary text-center">
-					<img src="images/dump4.jpg" class="card-img-top" alt="images/dump1.jpg">
-					<div class="card-body">
-						<h5 class="card-title">Все беды России отражены здесь</h5>
-						<p class="card-text">Десятки людей выросли у умерли а она все стоит...</p>
-						<a href="#" class="btn btn-primary ">Открыть польностью</a>
+					<div class="card bg-light border-secondary text-center">
+						<img src="images/dump3.jpg" class="card-img-top " alt="images/dump1.jpg">
+						<div class="card-body ">
+							<h5 class="card-title">Вонючая гора</h5>
+							<p class="card-text">Убирали раз 10, но опять образуется...</p>
+							<a href="openDump.html" class="btn btn-primary ">Открыть польностью</a>
+						</div>
 					</div>
+					<div class="card bg-light border-secondary text-center">
+						<img src="images/dump4.jpg" class="card-img-top" alt="images/dump1.jpg">
+						<div class="card-body">
+							<h5 class="card-title">Все беды России отражены здесь</h5>
+							<p class="card-text">Десятки людей выросли у умерли а она все стоит...</p>
+							<a href="openDump.html" class="btn btn-primary ">Открыть польностью</a>
+						</div>
+					</div>
+
+			
+
 				</div>
-
-		
-
 			</div>
 		</div>
 				
