add model dialog for add

--- a/openDump.html
+++ b/openDump.html
@@ -40,35 +40,26 @@
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<img src="images/trash.png" class="navbar-brand" alt="Navbar">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				  <ul class="navbar-nav">
-					<li class="nav-item active">
-					  <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Волонтерства</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Все свалки</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">События свалок</a>
-					</li>
-					<li class="nav-item dropdown">
-					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Действие со свалкой
-					  </a>
-					  <div class="dropdown-menu  bg-dark" style="color: white;" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Добавить свалку</a>
-						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Редактировать свалку</a>
-					  </div>
-					</li>
-				  </ul>
-				</div>
+            <img src="images/trash.png" class="navbar-brand" alt="Navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Волонтерства</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Все свалки</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">События свалок</a>
+                </li>
+                </ul>
+            </div>
 		</nav>
 
 
@@ -92,24 +83,29 @@
                         </div><hr class="my-4">
                         <div class="row">
                             <div class="col-lg-3 view-type">
-                                Фотографии:
+                                Ваши фотографии:
                             </div>
                             <div class="col interests">
                                 <div class="card-columns">
-                                    <div class="card" style="width: 18rem;">
+                                    <div class="card" style="min-width: 9rem;">
                                         <img src="images/dump11.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                        <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
                                     </div>
-                                    <div class="card" style="width: 18rem;">
+                                    <div class="card" style="min-width: 9rem;">
                                         <img src="images/dump12.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                        <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
                                     </div>
-                                    <div class="card" style="width: 18rem;">
+                                    <div class="card" style="min-width: 9rem;">
                                         <img src="images/dump13.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                        <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
                                     </div>
-                                    <div class="card" style="width: 18rem;">
+                                    <div class="card" style="min-width: 9rem;">
                                         <img src="images/dump14.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                        <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
                                     </div>
-                                    <div class="card" style="width: 18rem;">
+                                    <div class="card" style="min-width: 9rem;">
                                         <img src="images/dump15.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                        <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
                                     </div>
                                 </div>
                             </div>
