--- a/editDump.html
+++ b/editDump.html
@@ -14,11 +14,11 @@
 		</title>
 
 		<style>
-		   body {
-		    background-image: url(images/background.png); /* Путь к фоновому изображению */
-		    background-attachment: fixed; /* Фиксируем фон веб-страницы */
+		   /* body {
+		    background-image: url(images/background.png); /* Путь к фоновому изображению 
+		    background-attachment: fixed; /* Фиксируем фон веб-страницы 
 		    background-position: center center;
-		   }
+		   } */
 		
 		</style>
 	</head>
@@ -30,36 +30,104 @@
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<img src="images/trash.png" class="navbar-brand" alt="Navbar">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				  <ul class="navbar-nav">
-					<li class="nav-item active">
-					  <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Волонтерства</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Все свалки</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">События свалок</a>
-					</li>
-					<li class="nav-item dropdown">
-					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Действие со свалкой
-					  </a>
-					  <div class="dropdown-menu  bg-dark" style="color: white;" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Добавить свалку</a>
-						<a class="dropdown-item  bg-dark" style="color: white;" href="#">Редактировать свалку</a>
-					  </div>
-					</li>
-				  </ul>
-				</div>
+            <img src="images/trash.png" class="navbar-brand" alt="Navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Волонтерства</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Все свалки</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">События свалок</a>
+                </li>
+                </ul>
+            </div>
 		</nav>
+        
+        <main role="main">
+            <div class="jumbotron"> 
+                <div class="container">
+                        <div class="col align-self-center pb-4">
+                            <h1>Изменить свалку:</h1>
+                        </div>
+
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="nameDump">Название свалки</span>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Default" aria-describedby="nameDump"  placeholder="Большая свалка" >
+                    </div>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="shortDesc">Краткое описание</span>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Default" aria-describedby="shortDesc"  placeholder="Стоит со вторника" >
+                    </div>
+                    <div class="form-group">
+                        <label for="fullDesc">Расширенное описание</label>
+                        <textarea class="form-control" id="fullDesc" rows="3"></textarea>
+                    </div>
+
+
+                    <hr class="my-4">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroupFileAddon01">Загрузка фотографии:</span>
+                        </div>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="dumpPhoto" aria-describedby="dumpPhoto">
+                            <label class="custom-file-label" for="dumpPhoto">Выбрать файл</label>
+                        </div>
+                    </div>  
+                    <div class="row">
+                        <div class="col-lg-3 view-type">
+                            Ваши фотографии:
+                        </div>
+                        <div class="col interests">
+                            <div class="card-columns">
+                                <div class="card" style="min-width: 9rem;">
+                                    <img src="images/dump11.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                    <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
+                                </div>
+                                <div class="card" style="min-width: 9rem;">
+                                    <img src="images/dump12.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                    <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
+                                </div>
+                                <div class="card" style="min-width: 9rem;">
+                                    <img src="images/dump13.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                    <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
+                                </div>
+                                <div class="card" style="min-width: 9rem;">
+                                    <img src="images/dump14.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                    <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
+                                </div>
+                                <div class="card" style="min-width: 9rem;">
+                                    <img src="images/dump15.jpg" class="card-img-top" alt="images/dump1.jpg">
+                                    <button type="button" class="btn btn-danger btn-block">Удалить фотографию</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </main>
+
+        <footer class="footer bg-dark">
+            <div class="container">
+                <div class="footer-content">
+                    2018 © АлтГТУ им. И.И.Ползунова
+                </div>
+            </div>
+        </footer>
 
 	
 				
