--- a/editDump.html
+++ b/editDump.html
@@ -14,11 +14,12 @@
 		</title>
 
 		<style>
-		   /* body {
-		    background-image: url(images/background.png); /* Путь к фоновому изображению 
-		    background-attachment: fixed; /* Фиксируем фон веб-страницы 
+		   body {
+		    /* background-image: url(images/background.png); Путь к фоновому изображению */
+		    background-attachment: fixed; /* Фиксируем фон веб-страницы */
 		    background-position: center center;
-		   } */
+			background-color:rgb(233, 236, 240);
+		   }
 		
 		</style>
 	</head>
