--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 							</div>
 							<div class="form-group">
 								<label for="shortDesc">Краткое описание свалки</label>
+								<input class="datepicker" data-date-format="mm/dd/yyyy">
+								<script>
+										$('.datepicker').datepicker({
+    startDate: '-3d'
+});
+								</script>
 								<input type="text" class="form-control" id="shortDesc" placeholder="Стоит со вторника" />
 							</div>
 							
